--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -19,7 +19,7 @@ XTRA_SERVER_5=http://xtra1.gpsonextra.net/xtra.bin
 XTRA_VERSION_CHECK=1
 
 ERR_ESTIMATE=0
-NTP_SERVER=de.pool.npt.org
+NTP_SERVER=de.pool.ntp.org
 
 DEBUG_LEVEL=2
 INTERMEDIATE_POS=0
