--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -75,6 +75,7 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
     user camera
     group camera system inet input graphics
+    writepid /dev/cpuset/system-background/tasks
 
 on init
    write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
